Fixing font size problems on mobile and made code blocks horizontally scrollable

--- a/css/style.css
+++ b/css/style.css
@@ -6865,14 +6865,42 @@ h6 {
   font-size: 26px;
 }
 
+@media (max-width: 767px) {
+  body #blog-post li {
+    font-size: 16px;
+    line-height: 150%;
+    margin-bottom: 5px;
+  }
+
+  code {
+    font-size:80%;
+    color: #333;
+  }
+  pre {
+    overflow-x: auto;
+  }
+  pre code {
+    overflow-wrap: normal;
+    white-space: pre;
+    margin-top:22px;
+    margin-bottom:32px;
+    font-size: 12px;
+  }
+}
+
 code {
   font-size:80%;
   color: #333;
 }
 pre {
+  overflow-x: auto;
+}
+pre {
   margin-top:22px;
   margin-bottom:32px;
   font-size: 16px;
+  overflow-wrap: normal;
+  white-space: pre;
 }
 
 #blog-post h2::before {
